vlib/v/parser/tests/duplicate_operator_overload_err.vv
struct Foo{}
fn (f Foo) * (f2 Foo) Foo{}
fn (f Foo) * (f2 Foo) Foo{}
